[TFX-2615] EodCalculator cleanup. StreamEx