@@ -7,10 +7,13 @@ import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Component;
 
+import com.ihsmarkit.tfx.common.streams.Streams;
 import com.ihsmarkit.tfx.eod.model.BalanceTrade;
 import com.ihsmarkit.tfx.eod.model.PositionBalance;
 import com.ihsmarkit.tfx.eod.model.RawPositionData;
 import com.ihsmarkit.tfx.eod.model.TradeOrPositionEssentials;
+
+import one.util.streamex.EntryStream;
 
 @Component
 public class SingleCurrencyRebalanceCalculator {
@@ -43,17 +46,22 @@ public class SingleCurrencyRebalanceCalculator {
     }
 
     private List<BalanceTrade> mergeBalanceTrades(final List<BalanceTrade> balanceTrades) {
-        return balanceTrades.stream()
-            .collect(
-                Collectors.groupingBy(
-                    BalanceTrade::getOriginator,
+        return EntryStream.of(
+            balanceTrades.stream()
+                .collect(
                     Collectors.groupingBy(
-                        BalanceTrade::getCounterparty,
-                        Collectors.reducing(BigDecimal.ZERO, BalanceTrade::getAmount, BigDecimal::add)))
-            ).entrySet().stream()
-            .flatMap(
-                byOriginator -> byOriginator.getValue().entrySet().stream()
-                    .map(byCounterpart -> new BalanceTrade(byOriginator.getKey(), byCounterpart.getKey(), byCounterpart.getValue()))
-            ).collect(Collectors.toList());
+                        BalanceTrade::getOriginator,
+                        Collectors.groupingBy(
+                            BalanceTrade::getCounterparty,
+                            Streams.summingBigDecimal(BalanceTrade::getAmount)
+                        )
+                    )
+                )
+        )
+            .flatMapKeyValue((participant, amounts) ->
+                EntryStream.of(amounts)
+                    .mapKeyValue((counterparty, amount) -> new BalanceTrade(participant, counterparty, amount))
+            )
+            .toList();
     }
 }
